--- a/package.json
+++ b/package.json
@@ -2,26 +2,34 @@
   "name": "root",
   "private": true,
   "scripts": {
+    "build:backend": "tsc --build --verbose",
     "build:web": "cd packages/core-web && npm run build",
     "build:dg": "cd docs && ../packages/cli/index.js build -s dg-site.json",
     "build:ug": "cd docs && ../packages/cli/index.js build -s ug-site.json",
     "deploy:dg": "cd docs && ../packages/cli/index.js deploy -s dg-site.json --ci",
     "deploy:ug": "cd docs && ../packages/cli/index.js deploy -s ug-site.json --ci",
+    "clean": "tsc --build --clean",
     "csslint": "stylelint **/*.css **/*.vue",
     "csslintfix": "stylelint **/*.css **/*.vue --fix",
-    "lint": "eslint . --ext .js,.vue && npm run csslint",
-    "lintfix": "eslint . --ext .js,.vue --fix && npm run csslintfix",
+    "dev": "tsc -p tsconfig_dev.json --watch",
+    "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
+    "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
     "setup": "npm ci && lerna clean --yes && lerna bootstrap --hoist",
     "test": "npm run lint && lerna run test --stream",
     "updatetest": "lerna run updatetest --stream"
   },
   "devDependencies": {
+    "@types/node": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lodash": "^7.2.0",
+    "lerna": "^3.22.1",
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "lerna": "^3.22.1"
+    "typescript": "^4.6.2"
   }
 }
