Rename starter files to TypeScript

--- a/.eslintignore
+++ b/.eslintignore
@@ -9,6 +9,8 @@ packages/cli/src/lib/live-server/*
 # --- packages/core ---
 
 # Ignore JS files that are compiled from TS
+packages/core/src/errors/**/*.js
+packages/core/src/utils/**/*.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
