--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -72,7 +72,11 @@
     "winston": "^2.4.4"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.36",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.181",
+    "@types/path-is-inside": "^1.0.0",
     "jest": "^27.5.1",
     "memfs": "^3.0.1",
     "ts-jest": "^27.1.4"
