--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,7 @@
 {
   "files": [
-    "README.md"
+    "README.md",
+    "docs/about.md"
   ],
   "imageSize": 100,
   "commit": false,
@@ -20,7 +21,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/3306138?v=4",
       "profile": "https://github.com/ang-zeyu",
       "contributions": [
-        "code"
+        "code",
+        "projectManagement"
       ]
     },
     {
@@ -119,7 +121,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/1673303?v=4",
       "profile": "http://www.comp.nus.edu.sg/~damithch",
       "contributions": [
-        "code"
+        "code",
+        "mentoring"
       ]
     },
     {
