--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "tsc -p tsconfig_dev.json --watch",
     "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
     "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
-    "setup": "npm run clean && npm ci && lerna clean --yes && lerna bootstrap --hoist",
+    "setup": "npm ci && npm run clean && lerna clean --yes && lerna bootstrap --hoist",
     "test": "npm run lint && lerna run test --stream",
     "updatetest": "lerna run updatetest --stream"
   },
