--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "walk-sync": "^2.0.2"
   }
 }
