--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,7 +22,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc --build --verbose",
+    "compile": "tsc",
+    "build": "tsc --noEmitOnError",
     "prepare": "npm run build",
     "test": "jest --colors"
   },
