--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "../../tsconfig_base.json",
-  "compilerOptions": {
-    "composite": true
-  },
-  "include": ["src"]
+  "exclude": ["node_modules"]
 }
