--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "lerna": "^3.22.1",
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "typescript": "^4.6.2"
-  },
-  "dependencies": {
+    "typescript": "^4.6.2",
     "walk-sync": "^2.0.2"
   }
 }
