Update contributor info

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -131,7 +131,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/47470981?v=4",
       "profile": "https://github.com/jonahtanjz",
       "contributions": [
-        "code"
+        "code",
+        "review"
       ]
     },
     {
@@ -158,7 +159,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/24468110?v=4",
       "profile": "https://github.com/ryoarmanda",
       "contributions": [
-        "code"
+        "code",
+        "review"
       ]
     },
     {
@@ -275,7 +277,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/41845017?v=4",
       "profile": "https://tlylt.github.io/",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
@@ -356,7 +359,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/19247856?v=4",
       "profile": "https://github.com/ong6",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
@@ -456,7 +460,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/59471320?v=4",
       "profile": "https://github.com/kaixin-hc",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
