Add missing timeout

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run end-to-end tests
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 8
           max_attempts: 3
           retry_on: error
           command: npm run test:e2e
