--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -28,11 +28,10 @@ jobs:
           node-version: '14'
       - run: npm i -g npm@8.3.1
       - run: npm run setup
-      - run: cd packages/cli
       - name: Run end-to-end tests
         uses: nick-fields/retry@v2
         with:
           timeout_minutes: 8
           max_attempts: 3
           retry_on: error
-          command: npm run test:e2e
+          command: cd packages/cli && npm run test:e2e
