Run CI for contributor PR

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -507,6 +507,6 @@
   "projectOwner": "MarkBind",
   "repoType": "github",
   "repoHost": "https://github.com",
-  "skipCi": true,
+  "skipCi": false,
   "commitConvention": "none"
 }
