--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -36,7 +36,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "eslint-plugin-vue": "^7.9.0",
-    "floating-vue": "^1.0.0-beta.14",
+    "floating-vue": "1.0.0-beta.14",
     "jest": "^27.5.1",
     "jest-serializer-vue": "^2.0.2",
     "portal-vue": "^2.1.7",
