--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,6 @@
     "cheerio": "^0.22.0",
     "crypto-js": "^4.0.0",
     "csv-parse": "^4.14.2",
-    "dayjs": "^1.11.5",
     "ensure-posix-path": "^1.1.1",
     "fastmatter": "^2.1.1",
     "fs-extra": "^9.0.1",
@@ -62,6 +61,7 @@
     "markdown-it-texmath": "^1.0.0",
     "markdown-it-video": "^0.6.3",
     "material-icons": "^1.9.1",
+    "moment": "^2.29.4",
     "nunjucks": "3.2.2",
     "path-is-inside": "^1.0.2",
     "simple-git": "^2.17.0",
