--- a/.eslintignore
+++ b/.eslintignore
@@ -14,6 +14,10 @@ packages/core/src/utils/**/*.js
 packages/core/src/**/constants.js
 packages/core/src/Page/PageConfig.js
 packages/core/src/Site/SiteConfig.js
+packages/core/src/html/elements.js
+packages/core/src/html/Context.js
+packages/core/src/html/NodeProcessor.js
+packages/core/src/Page/PageSources.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
