--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -75,7 +75,10 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
+    "@types/cheerio": "^0.22.31",
+    "@types/domhandler": "^2.4.2",
     "@types/fs-extra": "^9.0.13",
+    "@types/htmlparser2": "^3.10.3",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.181",
     "@types/path-is-inside": "^1.0.0",
