Migrate constants.js files to typescript (#1913)

--- a/.eslintignore
+++ b/.eslintignore
@@ -11,6 +11,7 @@ packages/cli/src/lib/live-server/*
 # Ignore JS files that are compiled from TS
 packages/core/src/errors/**/*.js
 packages/core/src/utils/**/*.js
+packages/core/src/**/constants.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
