--- a/.eslintignore
+++ b/.eslintignore
@@ -12,6 +12,8 @@ packages/cli/src/lib/live-server/*
 packages/core/src/errors/**/*.js
 packages/core/src/utils/**/*.js
 packages/core/src/**/constants.js
+packages/core/src/Page/PageConfig.js
+packages/core/src/Site/SiteConfig.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
