Update contri table

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -278,7 +278,8 @@
       "profile": "https://tlylt.github.io/",
       "contributions": [
         "code",
-        "doc"
+        "doc",
+        "review"
       ]
     },
     {
