--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,11 @@ packages/core/src/Site/SiteConfig.js
 packages/core/src/html/elements.js
 packages/core/src/html/Context.js
 packages/core/src/html/NodeProcessor.js
+packages/core/src/lib/nunjucks-extensions/index.js
+packages/core/src/lib/nunjucks-extensions/nunjucks-date.js
+packages/core/src/lib/nunjucks-extensions/set-external.js
 packages/core/src/Page/PageSources.js
+packages/core/src/variables/VariableProcessor.js
+packages/core/src/variables/VariableRenderer.js
 
 # --- packages/core end ---
