Run lintfix instead of lint and use pre-commit zipapp

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "csslint": "stylelint **/*.css **/*.vue",
     "csslintfix": "stylelint **/*.css **/*.vue --fix",
     "dev": "tsc --watch",
-    "install:hooks": "pre-commit install",
+    "install:hooks": "python3 ./pre-commit/pre-commit-2.20.0.pyz install",
+    "uninstall:hooks": "python3 ./pre-commit/pre-commit-2.20.0.pyz uninstall",
     "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
     "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
     "setup": "npm ci && npm run clean && lerna clean --yes && lerna bootstrap --hoist",
