--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,16 +2,16 @@ default_install_hook_types: [pre-commit, post-checkout, pre-push]
 repos:
   -   repo: local
       hooks:
-        -   id: run lint
-            name: run lint
-            entry: ./pre-commit-scripts/pre-commit.sh
+        -   id: run lintfix
+            name: run lintfix
+            entry: ./pre-commit/pre-commit-scripts/pre-commit.sh
             pass_filenames: false
             language: system
             stages:
               - commit
         -   id: clean and build
             name: clean and build
-            entry: ./pre-commit-scripts/post-checkout.sh
+            entry: ./pre-commit/pre-commit-scripts/post-checkout.sh
             pass_filenames: false
             language: system
             always_run: true
@@ -19,7 +19,7 @@ repos:
               - post-checkout
         -   id: run tests
             name: run tests
-            entry: ./pre-commit-scripts/pre-push.sh
+            entry: ./pre-commit/pre-commit-scripts/pre-push.sh
             pass_filenames: false
             language: system
             stages:
