--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
             entry: ./pre-commit/pre-commit-scripts/pre-commit.sh
             pass_filenames: false
             language: system
+            verbose: true
             stages:
               - commit
         -   id: clean and build
@@ -15,6 +16,7 @@ repos:
             pass_filenames: false
             language: system
             always_run: true
+            verbose: true
             stages:
               - post-checkout
         -   id: run tests
@@ -22,5 +24,7 @@ repos:
             entry: ./pre-commit/pre-commit-scripts/pre-push.sh
             pass_filenames: false
             language: system
+            always_run: true
+            verbose: true
             stages:
               - push
