fix linkify and alt

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,8 +50,8 @@
     "markdown-it": "^12.3.2",
     "markdown-it-attrs": "^4.1.3",
     "markdown-it-emoji": "^1.4.0",
-    "markdown-it-imsize": "^2.0.1",
-    "markdown-it-linkify-images": "^2.0.0",
+    "@tlylt/markdown-it-imsize": "^3.0.0",
+    "markdown-it-linkify-images": "^3.0.0",
     "markdown-it-mark": "^3.0.0",
     "markdown-it-regexp": "^0.4.0",
     "markdown-it-sub": "^1.0.0",
