Rename PageVueServerRenderer to TypeScript (MarkBind#2098)

--- a/.eslintignore
+++ b/.eslintignore
@@ -23,6 +23,7 @@ packages/core/src/lib/nunjucks-extensions/set-external.js
 packages/core/src/Page/PageSources.js
 packages/core/src/variables/VariableProcessor.js
 packages/core/src/variables/VariableRenderer.js
+packages/core/src/Page/PageVueServerRenderer.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
