--- a/.gitignore
+++ b/.gitignore
@@ -86,5 +86,6 @@ packages/core/src/lib/nunjucks-extensions/set-external.js
 packages/core/src/Page/PageSources.js
 packages/core/src/variables/VariableProcessor.js
 packages/core/src/variables/VariableRenderer.js
+packages/core/src/Page/PageVueServerRenderer.js
 
 # --- packages/core end ---
