--- a/.eslintignore
+++ b/.eslintignore
@@ -24,6 +24,8 @@ packages/core/src/Page/PageSources.js
 packages/core/src/variables/VariableProcessor.js
 packages/core/src/variables/VariableRenderer.js
 packages/core/src/Page/PageVueServerRenderer.js
+packages/core/src/External/External.js
+packages/core/src/External/ExternalManager.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
