--- a/.gitignore
+++ b/.gitignore
@@ -87,5 +87,7 @@ packages/core/src/Page/PageSources.js
 packages/core/src/variables/VariableProcessor.js
 packages/core/src/variables/VariableRenderer.js
 packages/core/src/Page/PageVueServerRenderer.js
+packages/core/src/External/External.js
+packages/core/src/External/ExternalManager.js
 
 # --- packages/core end ---
