Adapt core/src/External to TypeScript

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
     "@markbind/core-web": "4.0.2",
     "@primer/octicons": "^15.0.1",
     "@sindresorhus/slugify": "^0.9.1",
+    "@tlylt/markdown-it-imsize": "^3.0.0",
     "bluebird": "^3.7.2",
     "bootswatch": "^5.1.3",
     "cheerio": "^0.22.0",
@@ -50,7 +51,6 @@
     "markdown-it": "^12.3.2",
     "markdown-it-attrs": "^4.1.3",
     "markdown-it-emoji": "^1.4.0",
-    "@tlylt/markdown-it-imsize": "^3.0.0",
     "markdown-it-linkify-images": "^3.0.0",
     "markdown-it-mark": "^3.0.0",
     "markdown-it-regexp": "^0.4.0",
@@ -80,6 +80,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/htmlparser2": "^3.10.3",
     "@types/jest": "^27.4.1",
+    "@types/js-beautify": "^1.13.3",
     "@types/lodash": "^4.14.181",
     "@types/nunjucks": "^3.2.1",
     "@types/path-is-inside": "^1.0.0",
