--- a/.gitignore
+++ b/.gitignore
@@ -94,5 +94,9 @@ packages/core/src/variables/VariableRenderer.js
 packages/core/src/Page/PageVueServerRenderer.js
 packages/core/src/External/External.js
 packages/core/src/External/ExternalManager.js
+packages/core/src/html/vueSlotSyntaxProcessor.js
+packages/core/src/html/MdAttributeRenderer.js
+packages/core/src/html/MarkdownProcessor.js
+packages/core/src/html/warnings.js
 
 # --- packages/core end ---
