--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ packages/core/src/Site/SiteConfig.js
 packages/core/src/html/elements.js
 packages/core/src/html/Context.js
 packages/core/src/html/NodeProcessor.js
+packages/core/src/html/scriptAndStyleTagProcessor.js
 packages/core/src/lib/nunjucks-extensions/index.js
 packages/core/src/lib/nunjucks-extensions/nunjucks-date.js
 packages/core/src/lib/nunjucks-extensions/set-external.js
