--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -40,32 +40,20 @@ body:
 - type: textarea
   id: Description
   attributes:
-    label:  What did you do? Describe the bug
+    label:  Describe the bug and the steps to reproduce it
     description: |
       A clear and concise description of the bug.
-
+      - What actually happened? Please include the actual, raw output. You are encouraged to submit a PR that reproduces this in `packages/cli/test/functional/test_site/bugs/index.md`.
+      - Please also include the actual source code causing the issue.
+  
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
   validations:
     required: true
-- type: textarea
-  id: RepoSteps
-  attributes:
-    label:  Steps to reproduce
-    description: Please include the actual source code causing the issue.
-  validations:
-    required: false
 - type: textarea
   id: expected
   attributes:
     label:  Expected behavior
     description: A concise description of what you expected to happen.
-  validations:
-    required: false
-- type: textarea
-  id: actual
-  attributes:
-    label:  Actual behavior
-    description: What actually happened? Please include the actual, raw output. You are encouraged to submit a PR that reproduces this in `packages/cli/test/functional/test_site/bugs/index.md`.
   validations:
     required: false
 - type: textarea
