--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -42,9 +42,10 @@ body:
   attributes:
     label:  Describe the bug and the steps to reproduce it
     description: |
-      A clear and concise description of the bug.
-      - What actually happened? Please include the actual, raw output. You are encouraged to submit a PR that reproduces this in `packages/cli/test/functional/test_site/bugs/index.md`.
-      - Please also include the actual source code causing the issue.
+      Please include the following, if availble:
+      - actual, raw output
+      - source code causing the issue
+        - you are encouraged (though not required) to submit a PR that reproduces this in `packages/cli/test/functional/test_site/bugs/index.md`.
   
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
   validations:
