--- a/.gitignore
+++ b/.gitignore
@@ -98,5 +98,7 @@ packages/core/src/html/vueSlotSyntaxProcessor.js
 packages/core/src/html/MdAttributeRenderer.js
 packages/core/src/html/MarkdownProcessor.js
 packages/core/src/html/warnings.js
+packages/core/src/plugins/Plugin.js
+packages/core/src/plugins/PluginManager.js
 
 # --- packages/core end ---
