--- a/.gitignore
+++ b/.gitignore
@@ -100,5 +100,9 @@ packages/core/src/html/MarkdownProcessor.js
 packages/core/src/html/warnings.js
 packages/core/src/plugins/Plugin.js
 packages/core/src/plugins/PluginManager.js
+packages/core/src/html/FootnoteProcessor.js
+packages/core/src/html/headerProcessor.js
+packages/core/src/html/codeblockProcessor.js
+packages/core/src/html/siteAndPageNavProcessor.js
 
 # --- packages/core end ---
