--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -86,6 +86,7 @@
     "@types/nunjucks": "^3.2.1",
     "@types/path-is-inside": "^1.0.0",
     "@types/url-parse": "^1.4.8",
+    "@types/uuid": "^9.0.0",
     "jest": "^27.5.1",
     "memfs": "^3.0.1",
     "ts-jest": "^27.1.4"
