--- a/.eslintignore
+++ b/.eslintignore
@@ -16,6 +16,7 @@ packages/core/src/Page/PageConfig.js
 packages/core/src/Site/SiteConfig.js
 packages/core/src/html/elements.js
 packages/core/src/html/Context.js
+packages/core/src/html/FootnoteProcessor.js
 packages/core/src/html/NodeProcessor.js
 packages/core/src/html/scriptAndStyleTagProcessor.js
 packages/core/src/lib/nunjucks-extensions/index.js
