--- a/.eslintignore
+++ b/.eslintignore
@@ -17,8 +17,10 @@ packages/core/src/Site/SiteConfig.js
 packages/core/src/Site/template.js
 packages/core/src/html/elements.js
 packages/core/src/html/Context.js
+packages/core/src/html/linkProcessor.js
 packages/core/src/html/NodeProcessor.js
 packages/core/src/html/scriptAndStyleTagProcessor.js
+packages/core/src/html/SiteLinkManager.js
 packages/core/src/lib/nunjucks-extensions/index.js
 packages/core/src/lib/nunjucks-extensions/nunjucks-date.js
 packages/core/src/lib/nunjucks-extensions/set-external.js
