Add working prototype

--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.5",
     "@vue/test-utils": "^1.0.3",
+    "alertifyjs": "^1.13.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.1.0",
