--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,10 @@ packages/core/src/html/vueSlotSyntaxProcessor.js
 packages/core/src/html/MdAttributeRenderer.js
 packages/core/src/html/MarkdownProcessor.js
 packages/core/src/html/warnings.js
+packages/core/src/html/codeblockProcessor.js
+packages/core/src/html/FootnoteProcessor.js
+packages/core/src/html/headerProcessor.js
+packages/core/src/html/siteAndPageNavProcessor.js
 packages/core/src/plugins/Plugin.js
 packages/core/src/plugins/PluginManager.js
 
