--- a/.eslintignore
+++ b/.eslintignore
@@ -16,20 +16,34 @@ packages/core/src/html/**/*.js
 packages/core/src/Layout/*.js
 packages/core/src/lib/nunjucks-extensions/*.js
 packages/core/src/lib/markdown-it/index.js
-packages/core/src/lib/markdown-it/highlight/*.js
-packages/core/src/lib/markdown-it/utils/*.js
-packages/core/src/Page/*.js
-packages/core/src/plugins/**/*.js
-packages/core/src/Site/*.js
-packages/core/src/utils/*.js
-packages/core/src/variables/*.js
-packages/core/test/unit/**/*.js
-
-# TODO: remove when migrated to TS
-!packages/core/src/Site/index.js
-!packages/core/test/unit/lib/nunjucks-extensions/*.js
-!markdown-it-icons.test.js
-!Site.test.js
+packages/core/src/lib/markdown-it/utils/index.js
+packages/core/src/lib/markdown-it/highlight/helper.js
+packages/core/src/lib/markdown-it/highlight/HighlightRule.js
+packages/core/src/lib/markdown-it/highlight/HighlightRuleComponent.js
+packages/core/src/lib/markdown-it/plugins/markdown-it-icons.js
+packages/core/test/unit/html/NodeProcessor.test.js
+packages/core/test/unit/html/NodeProcessor.data.js
+packages/core/test/unit/html/linkProcessor.test.js
+packages/core/test/unit/html/includePanelProcessor.test.js
+packages/core/test/unit/html/SiteLinkManager.test.js
+packages/core/test/unit/utils/utils.js
+packages/core/test/unit/utils/data.js
+packages/core/src/plugins/default/markbind-plugin-anchors.js
+packages/core/src/plugins/default/markbind-plugin-plantuml.js
+packages/core/src/plugins/default/markbind-plugin-shorthandSyntax.js
+packages/core/src/plugins/default/markbind-plugin-tree.js
+packages/core/test/unit/plugins/default/anchor.test.js
+packages/core/test/unit/plugins/default/plantuml.test.js
+packages/core/test/unit/plugins/default/shorthandSyntax.test.js
+packages/core/test/unit/plugins/default/tree.test.js
+packages/core/src/plugins/algolia.js
+packages/core/src/plugins/disqus.js
+packages/core/src/plugins/filterTags.js
+packages/core/src/plugins/googleAnalytics.js
+packages/core/src/plugins/mathDelimiters.js
+packages/core/src/Layout/index.js
+packages/core/src/Layout/Layout.js
+packages/core/src/Layout/LayoutManager.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
