--- a/.eslintignore
+++ b/.eslintignore
@@ -45,6 +45,7 @@ packages/core/src/html/FootnoteProcessor.js
 packages/core/src/html/headerProcessor.js
 packages/core/src/html/codeblockProcessor.js
 packages/core/src/html/siteAndPageNavProcessor.js
+packages/core/src/Page/index.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
