--- a/.gitignore
+++ b/.gitignore
@@ -108,5 +108,6 @@ packages/core/src/html/FootnoteProcessor.js
 packages/core/src/html/headerProcessor.js
 packages/core/src/html/codeblockProcessor.js
 packages/core/src/html/siteAndPageNavProcessor.js
+packages/core/src/Page/index.js
 
 # --- packages/core end ---
