--- a/.eslintignore
+++ b/.eslintignore
@@ -46,6 +46,7 @@ packages/core/src/html/headerProcessor.js
 packages/core/src/html/codeblockProcessor.js
 packages/core/src/html/siteAndPageNavProcessor.js
 packages/core/src/Page/index.js
+packages/core/src/utils/node.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
