Upgrade lerna to version 6.5.1
Our current version of lerna (version 4) is incompatible with Node 19 due to an outdated dependency called node-gyp. To ensure that we can support all versions of Node, we need to upgrade to the latest version of lerna (version 6).

In addition to Node 19 compatibility, upgrading to lerna 6 will allow us to take advantage of new features like caching.

During the upgrade process, I also noticed some formatting issues caused by js-beautify v1.14.7 when using custom tag (specifically custom tag with dash eg. site-nav). To fix this, I fixed the version of js-beautify to be v1.14.3 in package.json.

To achieve these improvements, I made the following changes:
* Upgraded lerna 4 to lerna 6.5.1
* Fixed js-beautify version to v1.14.3
* Set up npm workspaces and remove deprecated lerna bootsrap command
* Cached test results and updated test scripts

This fixes the following issues:
* #1984: Explore using Turborepo to improve build system
* #2162: Node v19.6.0 incompatibility on Windows 10

These changes will enable users to run our application on Node 19 and improve performance with caching.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,7 @@
     "highlight.js": "^10.4.1",
     "htmlparser2": "^3.10.1",
     "ignore": "^5.1.4",
-    "js-beautify": "^1.10.3",
+    "js-beautify": "1.14.3",
     "katex": "^0.15.6",
     "lodash": "^4.17.15",
     "markdown-it": "^12.3.2",
