--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "4.1.0"
+  "version": "4.1.0",
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "useWorkspaces": true
 }
