--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [ "packages/*" ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -15,7 +16,7 @@
     "dev": "tsc --watch",
     "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
     "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
-    "setup": "npm ci && npm run clean && lerna clean --yes && lerna bootstrap --hoist",
+    "setup": "npm ci && npm run clean && lerna clean --yes",
     "test": "npm run lint && lerna run test --stream",
     "updatetest": "lerna run updatetest --stream"
   },
@@ -28,7 +29,7 @@
     "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lodash": "^7.2.0",
-    "lerna": "^4.0.0",
+    "lerna": "^6.5.1",
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0",
     "typescript": "^4.6.2",
