Rename default plugins to TypeScript

--- a/.eslintignore
+++ b/.eslintignore
@@ -53,6 +53,10 @@ packages/core/test/unit/html/includePanelProcessor.test.js
 packages/core/test/unit/html/SiteLinkManager.test.js
 packages/core/test/unit/utils/utils.js
 packages/core/test/unit/utils/data.js
+packages/core/src/plugins/default/markbind-plugin-anchors.js
+packages/core/src/plugins/default/markbind-plugin-plantuml.js
+packages/core/src/plugins/default/markbind-plugin-shorthandSyntax.js
+packages/core/src/plugins/default/markbind-plugin-tree.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
