--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -76,6 +76,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
     "@types/cheerio": "^0.22.31",
+    "@types/crypto-js": "^4.1.1",
     "@types/domhandler": "^2.4.2",
     "@types/fs-extra": "^9.0.13",
     "@types/htmlparser2": "^3.10.3",
