--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,9 +67,8 @@
     "simple-git": "^2.17.0",
     "url-parse": "^1.5.10",
     "uuid": "^8.3.1",
-    "vue": "2.6.14",
-    "vue-server-renderer": "2.6.14",
-    "vue-template-compiler": "2.6.14",
+    "vue": "3.2.47",
+    "@vue/server-renderer": "3.2.47",
     "walk-sync": "^2.0.2",
     "winston": "^2.4.4"
   },
