--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -24,25 +24,27 @@
     "test": "jest --colors",
     "updatetest": "jest --updateSnapshot"
   },
+  "dependencies": {
+    "vue": "3.2.47"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.5",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^2.3.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "eslint-plugin-vue": "^7.9.0",
-    "floating-vue": "1.0.0-beta.14",
+    "floating-vue": "^2.0.0-beta.20",
     "jest": "^27.5.1",
     "jest-serializer-vue": "^2.0.2",
-    "portal-vue": "^2.1.7",
-    "vue": "^2.6.14",
-    "vue-final-modal": "^2.4.1",
-    "vue-jest": "^3.0.6",
-    "vue-loader": "^15.9.3"
+    "vue-final-modal": "^4.0.9",
+    "vue3-jest": "^27.0.0-alpha.2",
+    "vue-loader": "^17.0.1",
+    "vue-style-loader": "^4.1.3"
   },
   "private": true
 }
