--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -74,6 +74,7 @@
     "winston": "^2.4.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/bluebird": "^3.5.36",
     "@types/cheerio": "^0.22.31",
     "@types/crypto-js": "^4.1.1",
