--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,12 @@ packages/core/src/html/FootnoteProcessor.js
 packages/core/src/html/headerProcessor.js
 packages/core/src/html/codeblockProcessor.js
 packages/core/src/html/siteAndPageNavProcessor.js
+packages/core/src/lib/markdown-it/index.js
+packages/core/src/lib/markdown-it/utils/index.js
+packages/core/src/lib/markdown-it/highlight/helper.js
+packages/core/src/lib/markdown-it/highlight/HighlightRule.js
+packages/core/src/lib/markdown-it/highlight/HighlightRuleComponent.js
+packages/core/src/lib/markdown-it/plugins/markdown-it-icons.js
 packages/core/src/Page/index.js
 packages/core/test/unit/html/NodeProcessor.test.js
 packages/core/test/unit/html/NodeProcessor.data.js
