--- a/.gitignore
+++ b/.gitignore
@@ -77,21 +77,22 @@ packages/core/src/errors/**/*.js
 packages/core/src/External/*.js
 packages/core/src/html/**/*.js
 packages/core/src/Layout/*.js
-packages/core/src/Page/*.js
-packages/core/src/plugins/**/*.js
-packages/core/src/utils/*.js
-packages/core/src/variables/*.js
-packages/core/src/Site/*.js
 packages/core/src/lib/nunjucks-extensions/*.js
 packages/core/src/lib/markdown-it/index.js
 packages/core/src/lib/markdown-it/highlight/*.js
 packages/core/src/lib/markdown-it/plugins/markdown-it-icons.js
 packages/core/src/lib/markdown-it/utils/*.js
-packages/core/test/unit/html/**/*.js
-packages/core/test/unit/utils/**/*.js
-packages/core/test/unit/plugins/**/*.js
+packages/core/src/Page/*.js
+packages/core/src/plugins/**/*.js
+packages/core/src/Site/*.js
+packages/core/src/utils/*.js
+packages/core/src/variables/*.js
+packages/core/test/unit/**/*.js
 
 # TODO: remove when migrated to TS
 !packages/core/src/Site/index.js
+!packages/core/test/unit/lib/nunjucks-extensions/*.js
+!markdown-it-icons.test.js
+!Site.test.js
 
 # --- packages/core end ---
