--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
     "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
     "setup": "npm ci && npm run clean && lerna run prepare",
-    "test": "npm run lint && lerna run test --stream",
-    "updatetest": "lerna run updatetest --stream"
+    "test": "npm run lint && lerna run test --stream --parallel",
+    "updatetest": "lerna run updatetest --stream --parallel"
   },
   "devDependencies": {
     "@types/node": "^18.15.0",
