--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [ "packages/*" ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -15,12 +16,12 @@
     "dev": "tsc --watch",
     "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
     "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
-    "setup": "npm ci && npm run clean && lerna clean --yes && lerna bootstrap --hoist",
-    "test": "npm run lint && lerna run test --stream",
-    "updatetest": "lerna run updatetest --stream"
+    "setup": "npm ci && npm run clean && lerna run prepare",
+    "test": "npm run lint && lerna run test --stream --parallel",
+    "updatetest": "lerna run updatetest --stream --parallel"
   },
   "devDependencies": {
-    "@types/node": "^17.0.22",
+    "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^7.32.0",
@@ -28,7 +29,7 @@
     "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lodash": "^7.2.0",
-    "lerna": "^4.0.0",
+    "lerna": "^6.5.1",
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0",
     "typescript": "^4.6.2",
