--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,7 @@
     "highlight.js": "^10.4.1",
     "htmlparser2": "^3.10.1",
     "ignore": "^5.1.4",
-    "js-beautify": "^1.10.3",
+    "js-beautify": "1.14.3",
     "katex": "^0.15.6",
     "lodash": "^4.17.15",
     "markdown-it": "^12.3.2",
@@ -86,7 +86,7 @@
     "@types/katex": "^0.16.0",
     "@types/lodash": "^4.14.181",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^17.0.22",
+    "@types/node": "^18.15.0",
     "@types/nunjucks": "^3.2.1",
     "@types/path-is-inside": "^1.0.0",
     "@types/primer__octicons": "^17.11.0",
