--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,7 @@ packages/core/src/plugins/codeBlockCopyButtons.js
 packages/core/src/plugins/codeBlockWrapButtons.js
 packages/core/src/plugins/types.js
 packages/core/src/plugins/web3Form.js
+packages/core/src/plugins/toast.js
 packages/core/src/variables/VariableProcessor.js
 packages/core/src/variables/VariableRenderer.js
 packages/core/src/Page/PageVueServerRenderer.js
