--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -80,6 +80,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/domhandler": "^2.4.2",
     "@types/fs-extra": "^9.0.13",
+    "@types/gh-pages": "^3.2.1",
     "@types/htmlparser2": "^3.10.3",
     "@types/jest": "^27.4.1",
     "@types/js-beautify": "^1.13.3",
