--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -33,7 +33,6 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.5",
     "@vue/test-utils": "^2.3.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
@@ -42,7 +41,7 @@
     "jest": "^27.5.1",
     "jest-serializer-vue": "^2.0.2",
     "vue-final-modal": "^4.0.9",
-    "vue3-jest": "^27.0.0-alpha.2",
+    "@vue/vue3-jest": "^27.0.0",
     "vue-loader": "^17.0.1",
     "vue-style-loader": "^4.1.3"
   },
