--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Check build log for warnings
         run: |
           log_file="docs/_markbind/logs/markbind-$(date +'%Y-%m-%d').log"
-          pattern="^[0-9T:.Z-]+ - warn:"
+          pattern="^[0-9T:.Z-]+ - (warn|error):"
           
           if grep -q -E "$pattern" "$log_file"; then
             printf "The following warnings were found when building the documentation:\n"
