--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": [ "packages/*" ],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.0",
+    "@types/qr-image": "^3.2.5",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^7.32.0",
@@ -36,5 +39,8 @@
     "stylelint-config-standard": "^19.0.0",
     "typescript": "^4.6.2",
     "walk-sync": "^2.0.2"
+  },
+  "dependencies": {
+    "qr-image": "^3.2.0"
   }
 }
