--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,6 +33,7 @@
     "@primer/octicons": "^15.0.1",
     "@sindresorhus/slugify": "^0.9.1",
     "@tlylt/markdown-it-imsize": "^3.0.0",
+    "@types/qr-image": "^3.2.5",
     "bluebird": "^3.7.2",
     "bootswatch": "^5.1.3",
     "cheerio": "^0.22.0",
@@ -64,6 +65,7 @@
     "moment": "^2.29.4",
     "nunjucks": "3.2.2",
     "path-is-inside": "^1.0.2",
+    "qr-image": "^3.2.0",
     "simple-git": "^2.17.0",
     "url-parse": "^1.5.10",
     "uuid": "^8.3.1",
