--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,7 +34,7 @@
     "@sindresorhus/slugify": "^0.9.1",
     "@tlylt/markdown-it-imsize": "^3.0.0",
     "bluebird": "^3.7.2",
-    "bootswatch": "^5.1.3",
+    "bootswatch": "5.1.3",
     "cheerio": "^0.22.0",
     "crypto-js": "^4.0.0",
     "csv-parse": "^4.14.2",
