--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,10 +88,7 @@ jobs:
       - name: Deploy DG on any commit to master, to markbind.org/devdocs
         run: >-
           npm run build:web &&
-          npm run build:dg &&
           npm run deploy:dg
       - name: Deploy UG on release, to markbind.org
         if: github.ref_type == 'tag'
-        run: >-
-          npm run build:ug &&
-          npm run deploy:ug
+        run: npm run deploy:ug
