Add CI check for documentation deploy errors (#2378)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,3 +92,13 @@ jobs:
       - name: Deploy UG on release, to markbind.org
         if: github.ref_type == 'tag'
         run: npm run deploy:ug
+      - name: Check deploy log
+        run: |
+          log_file="docs/_markbind/logs/markbind-$(date +'%Y-%m-%d').log"
+          pattern="^[0-9T:.Z-]+ - error:"
+          
+          if grep -q -E "$pattern" "$log_file"; then
+            printf "The following issues were found when deploying the documentation:\n"
+            grep -E "$pattern" "$log_file"
+            exit 1
+          fi
