--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": [ "packages/*" ],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -32,8 +34,9 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lodash": "^7.2.0",
     "lerna": "^6.5.1",
-    "stylelint": "^12.0.0",
-    "stylelint-config-standard": "^19.0.0",
+    "stylelint": "^16.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.0",
     "typescript": "^4.6.2",
     "walk-sync": "^2.0.2"
   }
